<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_sliding_button_state_description_off">Turned off</string>
    <string name="accessibility_sliding_button_state_description_on">Turned on</string>
    <string name="accessibility_tab_state_description_unselect">Not selected</string>
    <string name="accessibility_tab_statedesc_unselect">Not selected</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="add_alarm">Add alarm</string>
    <string name="add_clock">Add clock</string>
    <string name="add_timer">Frequent timer</string>
    <string name="afternoon">Afternoon</string>
    <string name="alarm_alert">Alarm is ringing</string>
    <string name="alarm_alert_close_entrance">Turn off</string>
    <string name="alarm_alert_now">%s alarm</string>
    <string name="alarm_alert_snooze_button">Snooze</string>
    <string name="alarm_ascending_mode_summary">Alarm volume rises gradually</string>
    <string name="alarm_ascending_mode_title">Ascending volume</string>
    <string name="alarm_clock_more_setting">Additional settings</string>
    <string name="alarm_disabled">Off</string>
    <string name="alarm_in_furture_new">Alarm in less than %d minute</string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in Clock.</string>
    <string name="alarm_list_title">Alarm</string>
    <string name="alarm_notify_snooze_label">%s snooze</string>
    <string name="alarm_permanent_alert">Ringing</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alarm_repeat_self_define">Customize</string>
    <string name="alarm_repeat_self_define_button">Customize</string>
    <string name="alarm_ringtone_picker">Alarms</string>
    <string name="alarm_set_new">Alarm will go off in less than %d minute.</string>
    <string name="alarm_snooze_island">Snoozed</string>
    <string name="alert">Ringtone</string>
    <string name="alert_ringtone">Alarm ringtone</string>
    <string name="alert_vibrate_enable_summary">Vibrate when alarm goes off</string>
    <string name="alert_volume">Ringtone volume</string>
    <string name="alert_volume_summary">Set ringtone volume for alarms and timers</string>
    <string name="alert_xiaoai_ringtone_desc">Mi AI is talking…</string>
    <string name="all_alarm_close">All alarms are off</string>
    <string name="am">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="aod_timer_pause">Timer paused</string>
    <string name="aod_timer_running">Timer running</string>
    <string name="app_label">Clock</string>
    <string name="app_name">SplitLib</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_silence_entries1">Never</string>
    <string name="auto_silence_entries2">%d minute</string>
    <string name="auto_silence_entries3">%d minutes</string>
    <string name="auto_silence_entries4">%d minutes</string>
    <string name="auto_silence_entries5">%d minutes</string>
    <string name="auto_silence_entries6">%d minutes</string>
    <string name="auto_silence_entries7">%d minutes</string>
    <string name="auto_silence_entries8">%d minutes</string>
    <string name="auto_silence_summary">Set time after which alarms and timers will be silenced</string>
    <string name="auto_silence_title">Auto-silence</string>
    <string name="back">Exit</string>
    <string name="bedtime">Bedtime</string>
    <string name="bedtime_analysis_more">More data</string>
    <string name="bedtime_banner_desc">Consistent sleep is important</string>
    <string name="bedtime_banner_guide_desc">Schedule your bedtime</string>
    <string name="bedtime_guide_back_desc">You won\'t be able to receive bedtime alerts if you exit now. Exit anyway?</string>
    <string name="bedtime_manage">Manage bedtime</string>
    <string name="bedtime_manage_desc">Schedule bedtime reminders and track your sleep</string>
    <string name="bedtime_manage_open">Schedule your bedtime</string>
    <string name="bedtime_manage_tip">Manage bedtime here</string>
    <string name="bedtime_not_open_text">Your stats will appear here after you start using bedtime reminders</string>
    <string name="bedtime_repeat_desc">Days when you receive reminders</string>
    <string name="bedtime_repeat_type">Schedule</string>
    <string name="bedtime_setting_complete">Sleep tight!</string>
    <string name="bedtime_setting_complete_desc">Follow your new bedtime schedule to function at your best</string>
    <string name="bedtime_setting_no_disturbance">Switch to DND while you sleep?</string>
    <string name="bedtime_setting_no_disturbance_desc">Ringtones, notification sounds, and vibration will be silenced until you wake up</string>
    <string name="bedtime_setting_repeat_type">When will your bedtime schedule apply?</string>
    <string name="bedtime_setting_repeat_type_desc">Select the days when you\'ll receive reminders</string>
    <string name="bedtime_settings">Bedtime settings</string>
    <string name="bedtime_sleep_time_remind_new">You\'ll be reminded to go to bed %d minutes before this time</string>
    <string name="bedtime_sleep_time_setting">When will you go to bed?</string>
    <string name="bedtime_wake_up_time_remind">An alarm will go off at this time</string>
    <string name="bedtime_wake_up_time_setting">When will you get up?</string>
    <string name="bedtime_welcome">Manage your bedtime</string>
    <string name="bedtime_welcome_desc">Maintaining a regular and consistent sleep schedule benefits your health. Set reminders that will help you go to bed and get up on time every day.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="channel_name_alarm">Alarm</string>
    <string name="channel_name_sleep">Sleep</string>
    <string name="channel_name_stopwatch">Stopwatch</string>
    <string name="channel_name_timer">Timer</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chinese_day_1">初一</string>
    <string name="chinese_day_10">初十</string>
    <string name="clock_tab_name">World clock</string>
    <string name="edit_systemtime">Edit system time</string>
    <string name="holiday_update_title">Update info about public holidays</string>
    <string name="life_post_wake_up_acumu_day_title">Day count</string>
    <string name="life_post_wake_up_percentage_sign">%</string>
    <string name="life_post_wake_up_percentage_title">Xiaomi Fans behind you</string>
    <string name="life_post_wake_up_time_title">Wake up time</string>
    <string name="locked_show_arriving_alarm_title">Show alarms on Lock screen</string>
    <string name="more_alert_setting">Additional alarm settings</string>
    <string name="more_settings">Settings</string>
    <string name="normal_settings">General settings</string>
    <string name="other_settings">Additional settings</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_settings_title">Privacy</string>
    <string name="setting_alarm_arriving_subtitle">Show notifications before alarms go off</string>
    <string name="setting_alarm_arriving_title">Notification before ringing</string>
    <string name="setting_complete">Done</string>
    <string name="shortcut_new_alarm">Set alarm</string>
    <string name="shortcut_start_timer">Start timer</string>
    <string name="shortcut_stop_watch">Start stopwatch</string>
    <string name="show_life_post_desc">Morning reports won\'t be displayed if you turn this feature off</string>
    <string name="show_life_post_lable">Show morning report</string>
    <string name="shutdown_alarm_alert_title">Shutdown alarm</string>
    <string name="sleep_duration">Sleep duration: </string>
    <string name="sleep_no_disturbance">DND mode</string>
    <string name="sleep_no_disturbance_desc">Switch to DND mode until you wake up</string>
    <string name="sleep_remind">Bedtime reminder</string>
    <string name="sleep_time">Fall asleep</string>
    <string name="snooze_duration_count">Snooze count</string>
    <string name="snooze_duration_title">Snooze</string>
    <string name="stopwatch_title">Stopwatch</string>
    <string name="time_picker_label_hour">H</string>
    <string name="time_picker_label_minute">M</string>
    <string name="time_picker_label_second">S</string>
    <string name="time_settings">Clock settings</string>
    <string name="timer_ringtone">Timer ringtone</string>
    <string name="timer_title">Timer</string>
    <string name="vibrate_pref_summary">Vibrate when alarm sounds</string>
    <string name="volume_button_setting_desc">Assign functions for the Power and Volume +/- buttons</string>
    <string name="volume_button_setting_title">Volume buttons</string>
    <string name="wake_up_ringtone">Alarm ringtone</string>
    <string name="wake_up_time">Wake up</string>
</resources>