<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/bedtime_manage"
        android:key="key_open_bedtime"
        android:summary="@string/bedtime_manage_desc"
        android:defaultValue="true"
        android:fontFamily="mipro_medium"/>
    <PreferenceCategory>
        <miuix.preference.DropDownPreference
            android:title="@string/sleep_remind"
            android:key="notification_adv_time"
            android:dependency="key_open_bedtime"
            android:defaultValue="15"/>
        <com.android.deskclock.settings.pref.ClockValuePreference
            android:title="@string/wake_up_ringtone"
            android:key="key_wake_alert"
            android:dependency="key_open_bedtime"/>
        <CheckBoxPreference
            android:title="@string/vibrate_pref_summary"
            android:key="key_vibrator"
            android:dependency="key_open_bedtime"/>
        <com.android.deskclock.settings.pref.ClockRepeatPreference
            android:title="@string/bedtime_repeat_type"
            android:key="key_bedtime_repeat_type"
            android:summary="@string/bedtime_repeat_desc"
            android:dependency="key_open_bedtime"/>
        <CheckBoxPreference
            android:title="@string/sleep_no_disturbance"
            android:key="key_sleep_no_disturbance"
            android:summary="@string/sleep_no_disturbance_desc"
            android:dependency="key_open_bedtime"/>
    </PreferenceCategory>
</PreferenceScreen>
