<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/alarm_btn_mutable_icon"
        android:enabled="true"
        android:visible="true"
        android:title="@string/alarm_list_title"
        app:miuixNavigationId="1000"/>
    <item
        android:icon="@drawable/world_clock_btn_mutable_icon"
        android:enabled="true"
        android:visible="true"
        android:title="@string/clock_tab_name"
        app:miuixNavigationId="1001"/>
    <item
        android:icon="@drawable/stopwatch_btn_mutable_icon"
        android:enabled="true"
        android:visible="true"
        android:title="@string/stopwatch_title"
        app:miuixNavigationId="1002"/>
    <item
        android:icon="@drawable/timer_btn_mutable_icon"
        android:enabled="true"
        android:visible="true"
        android:title="@string/timer_title"
        app:miuixNavigationId="1003"/>
</menu>
