<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:icon="@drawable/shortcut_new_alarm"
        android:enabled="true"
        android:shortcutId="new_alarm"
        android:shortcutShortLabel="@string/shortcut_new_alarm"
        android:shortcutLongLabel="@string/shortcut_new_alarm"
        android:shortcutDisabledMessage="@string/shortcut_new_alarm">
        <intent
            android:targetPackage="com.android.deskclock"
            android:action="com.android.deskclock.shortcut.NEW_ALARM"
            android:targetClass="com.android.deskclock.ShortcutTrampolineActivity"/>
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>
    <shortcut
        android:icon="@drawable/shortcut_stop_watch"
        android:enabled="true"
        android:shortcutId="stop_watch"
        android:shortcutShortLabel="@string/shortcut_stop_watch"
        android:shortcutLongLabel="@string/shortcut_stop_watch"
        android:shortcutDisabledMessage="@string/shortcut_stop_watch">
        <intent
            android:targetPackage="com.android.deskclock"
            android:action="com.android.deskclock.shortcut.STOP_WATCH"
            android:targetClass="com.android.deskclock.ShortcutTrampolineActivity"/>
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>
    <shortcut
        android:icon="@drawable/shortcut_start_timer"
        android:enabled="true"
        android:shortcutId="start_timer"
        android:shortcutShortLabel="@string/shortcut_start_timer"
        android:shortcutLongLabel="@string/shortcut_start_timer"
        android:shortcutDisabledMessage="@string/shortcut_start_timer">
        <intent
            android:targetPackage="com.android.deskclock"
            android:action="com.android.deskclock.shortcut.START_TIMER"
            android:targetClass="com.android.deskclock.ShortcutTrampolineActivity"/>
        <categories android:name="android.shortcut.conversation"/>
    </shortcut>
</shortcuts>
