<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal"
    android:clipChildren="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">
    <com.android.deskclock.widget.NumberPicker
        android:id="@+id/hour"
        android:clipChildren="false"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/time_picker_label_hour"
        android:layout_weight="1"
        android:layoutDirection="locale"
        android:layout_marginStart="3dp"
        style="@style/TimerNumberPicker"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/number_picker_split_line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/timer_picker_split"/>
    <com.android.deskclock.widget.NumberPicker
        android:id="@+id/minute"
        android:clipChildren="false"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/time_picker_label_minute"
        android:layout_weight="1"
        android:layoutDirection="locale"
        style="@style/TimerNumberPicker"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/number_picker_split_line2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/timer_picker_split"/>
    <com.android.deskclock.widget.NumberPicker
        android:id="@+id/second"
        android:clipChildren="false"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/time_picker_label_second"
        android:layout_weight="1"
        android:layoutDirection="locale"
        android:layout_marginEnd="3dp"
        style="@style/TimerNumberPicker"/>
</LinearLayout>
