<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@drawable/life_post_info_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/wake_up_time_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <com.android.deskclock.view.TypefaceTextView
            android:id="@+id/wake_up_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typeface="mitype_mono_demibold_res_0x7f0a0262"
            style="@style/LifePostWakeUpTextStyle"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_post_wake_up_time_title"
            app:typeface="mipro_regular_res_0x7f0a025e"
            style="@style/LifePostWakeUpDescTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/beat_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.android.deskclock.view.TypefaceTextView
                android:id="@+id/beat_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:typeface="mitype_mono_demibold_res_0x7f0a0262"
                style="@style/LifePostWakeUpTextStyle"/>
            <com.android.deskclock.view.TypefaceTextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_post_wake_up_percentage_sign"
                android:layout_alignBaseline="@+id/beat_percentage"
                android:layout_toEndOf="@+id/beat_percentage"
                app:typeface="mitype_mono_demibold_res_0x7f0a0262"
                style="@style/LifePostWakeUpPercentageTextStyle"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_post_wake_up_percentage_title"
            app:typeface="mipro_regular_res_0x7f0a025e"
            style="@style/LifePostWakeUpDescTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/acumulate_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <com.android.deskclock.view.TypefaceTextView
            android:id="@+id/acumulate_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typeface="mitype_mono_demibold_res_0x7f0a0262"
            style="@style/LifePostWakeUpTextStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_post_wake_up_acumu_day_title"
            app:typeface="mipro_regular_res_0x7f0a025e"
            style="@style/LifePostWakeUpDescTextStyle"/>
    </LinearLayout>
</LinearLayout>
