<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:set_alarm_number_picker="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/drop_down_popup_window_bg"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:layout_width="@dimen/bedtime_popup_window_width"
    android:layout_height="@dimen/bedtime_popup_window_height">
    <TextView
        android:textSize="@dimen/bedtime_banner_desc_textsize"
        android:textColor="@color/edit_dialog_title"
        android:gravity="center"
        android:id="@+id/bedtime_alarm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bedtime_popup_window_margin_top"
        android:layout_marginBottom="@dimen/bedtime_popup_window_margin_bottom"
        android:text="@string/wake_up_time"/>
    <com.android.deskclock.widget.SleepTimePicker
        android:id="@+id/time_picker"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_number_picker_height"
        android:layout_marginBottom="@dimen/bedtime_popup_window_timepicker_bottom"
        android:layout_below="@+id/bedtime_alarm_title"
        set_alarm_number_picker:layout="@layout/time_picker"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_button_margin_bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:textSize="@dimen/bedtime_guide_button_textsize"
            android:textColor="@color/bedtime_guide_back_button_text_color"
            android:id="@+id/cancel_btn"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/cancel"
            android:layout_marginEnd="@dimen/dialog_buttom_margin_center"
            style="@style/SecondaryButton"/>
        <Button
            android:textSize="@dimen/bedtime_guide_button_textsize"
            android:textColor="@color/bedtime_manager_confirm_btn_color"
            android:id="@+id/done_btn"
            android:background="@drawable/selector_button_bg"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/setting_complete"
            android:layout_marginStart="@dimen/dialog_buttom_margin_center"
            android:layout_alignParentEnd="true"
            style="@style/SecondaryButton"/>
    </LinearLayout>
</RelativeLayout>
