<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="@drawable/life_post_info_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <com.android.deskclock.view.TypefaceTextView
            android:id="@+id/sleep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typeface="mitype_mono_demibold_res_0x7f0a0262"
            style="@style/LifePostWakeUpTextStyle"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_time"
            app:typeface="mipro_regular_res_0x7f0a025e"
            style="@style/LifePostWakeUpDescTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/wake_up_time_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <com.android.deskclock.view.TypefaceTextView
            android:id="@+id/get_up_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typeface="mitype_mono_demibold_res_0x7f0a0262"
            style="@style/LifePostWakeUpTextStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wake_up_time"
            app:typeface="mipro_regular_res_0x7f0a025e"
            style="@style/LifePostWakeUpDescTextStyle"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <com.android.deskclock.view.TypefaceTextView
            android:id="@+id/sleep_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:typeface="mitype_mono_demibold_res_0x7f0a0262"
            style="@style/LifePostWakeUpTextStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_duration"
            app:typeface="mipro_regular_res_0x7f0a025e"
            style="@style/LifePostWakeUpDescTextStyle"/>
    </LinearLayout>
</LinearLayout>
